@@ -6,6 +6,7 @@ import org.openqa.selenium.support.PageFactory;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 
 public class PageObject {
     protected WebDriver driver;
@@ -19,8 +20,9 @@ public class PageObject {
         String url = driver.getCurrentUrl();
         String path;
         try {
-            path = new URI(url).getPath();
-        } catch (URISyntaxException e) {
+            String pathWithSession = new URL(url).getPath();
+            path = pathWithSession.split(";")[0];
+        } catch (MalformedURLException e) {
             e.printStackTrace();
             return "Error: trying to get path from malformed url";
         }
